[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ListConnectedsItemList" type="ItemList" parent="."]
margin_left = 221.0
margin_top = 113.0
margin_right = 668.0
margin_bottom = 402.0

[node name="Name" type="LineEdit" parent="."]
margin_left = 820.0
margin_top = 173.0
margin_right = 878.0
margin_bottom = 197.0
text = "PlayerTest"

[node name="Ip" type="LineEdit" parent="."]
margin_left = 826.0
margin_top = 292.0
margin_right = 884.0
margin_bottom = 316.0
text = "127.0.0.1"

[node name="StartButton" type="Button" parent="."]
margin_left = 710.0
margin_top = 461.0
margin_right = 835.0
margin_bottom = 492.0
text = "Start"

[node name="EnterButton" type="Button" parent="."]
margin_left = 416.0
margin_top = 475.0
margin_right = 541.0
margin_bottom = 506.0
text = "Enter"

[node name="CreateButton" type="Button" parent="."]
margin_left = 94.0
margin_top = 481.0
margin_right = 219.0
margin_bottom = 512.0
text = "Create"

[node name="Label" type="Label" parent="."]
margin_left = 718.0
margin_top = 173.0
margin_right = 758.0
margin_bottom = 187.0
text = "Name: "

[node name="Label2" type="Label" parent="."]
margin_left = 721.0
margin_top = 303.0
margin_right = 761.0
margin_bottom = 317.0
text = "IP:"

[connection signal="pressed" from="EnterButton" to="." method="_on_EnterButton_pressed"]
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
